Modify Makefile for jsspp bibliography. Minor updates to report.tex and project.bib. Continued development of jsspp.tex.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -33,6 +33,13 @@
     TITLE  = "http://www.globus.org",
 }
 
+@MISC
+{
+    GPL2002, 
+    AUTHOR = "The GNU General Public License",
+    TITLE  = "http://www.gnu.org/licenses/licenses.html",
+}
+
 @CONFERENCE
 {
     Jackson2001, 
