Minor updates to report.tex. Updates to WWW pointers in project.bib. Major enhancements to jsspp.tex.

--- a/trunk/doc/common/project.bib
+++ b/trunk/doc/common/project.bib
@@ -36,7 +36,7 @@
 @MISC
 {
     GPL2002, 
-    AUTHOR = "The GNU General Public License",
+    AUTHOR = "The GNU Licenses",
     TITLE  = "http://www.gnu.org/licenses/licenses.html",
 }
 
@@ -64,9 +64,23 @@
 
 @MISC
 {
+    LL2002, 
+    AUTHOR = "LoadLeveler documentation",
+    TITLE  = "http://www-1.ibm.com/servers/eserver/pseries/library/sp\_books/loadleveler.html"
+}
+
+@MISC
+{
     Maui2002, 
     AUTHOR = "Maui scheduler repository",
     TITLE  = "http://mauischeduler.sourceforge.net/",
+}
+
+@MISC
+{
+    Quadrics2002, 
+    AUTHOR = "Quadrics Resource Management System",
+    TITLE  = "http://www.quadrics.com/",
 }
 
 @CONFERENCE
